# GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeRC.cmake  Changelog.md  LICENSE  ReadMe.md  imgui.ini  makefile  scene.json  todo.txt
Editor/: CMakeLists.txt
Editor/include/: GamePlugin.hpp  LevelEditor.hpp  ProjectLoader.hpp  Window.hpp
Editor/include/History/: CommandHistory.hpp  EditorCommand.hpp
Editor/include/History/Commands/: CreateEntityCommand.hpp  DeleteEntityCommand.hpp  SelectEntityCommand.hpp
Editor/include/ImGui/: ImGui.hpp
Editor/include/Panels/: EntityInspector.hpp  SceneHierarchy.hpp  SceneViewport.hpp
Editor/src/: LevelEditor.cpp  ProjectLoader.cpp  Window.cpp  main.cpp
Editor/src/History/: CommandHistory.cpp
Editor/src/History/Commands/: CreateEntityCommand.cpp  DeleteEntityCommand.cpp  SelectEntityCommand.cpp
Editor/src/ImGui/: ImGui.cpp
Editor/src/Panels/: EntityInspector.cpp  SceneHierarchy.cpp  SceneViewport.cpp
Engine/: CMakeLists.txt  makefile
Engine/2D/: Component2D.cpp  Entity2D.cpp  Game2D.cpp  Game2D.h  ResourceManager.cpp  Transform2D.cpp
Engine/2D/Components/: Component2D.cpp  Transform2D.cpp
Engine/2D/Physics/: Collider2D.cpp  CollisionGrid.cpp  CollisionManifold.cpp  Collisions.cpp  Physics2D.cpp  Rigidbody2D.cpp
Engine/2D/Rendering/: Shader.cpp  ShapeRenderer.cpp  SpriteRenderer.cpp  Texture2D.cpp
Engine/2D/Types/: Vector2.cpp
Engine/CMake/: BuildConfig.cmake  EngineSetup.cmake  ImGui.cmake  PlatformDetection.cmake
Engine/Common/: Log.cpp  Settings.cpp
Engine/Common/Headers/: RenderingHeaders.h
Engine/Common/Rendering/: OpenGL.cpp  OpenGL.h
Engine/Include/Common/: Log.h  Property.h  Settings.h
Engine/Include/Engine2D/: Component2D.h  Entity2D.h  Game2D.h  Transform2D.h
Engine/Include/Engine2D/ParticleSystem/: ParticleSystem2D.h  ParticleSystemRenderer2D.h
Engine/Include/Engine2D/Physics/: Collider2D.h  CollisionGrid.h  CollisionManifold.h  CollisionPair.h  Collisions.h  Physics2D.h  Rigidbody2D.h
Engine/Include/Engine2D/Rendering/: Shader.h  ShapeRenderer.h  SpriteRenderer.h  Texture2D.h
Engine/Include/Engine2D/Types/: Vector2.h
Engine/Include/Input/: Gamepad.h  Keyboard.h  Mouse.h
Engine/Include/Shaders/: particle.frag  particle.vert  sprite.fs
Engine/Input/: Gamepad.cpp  Keyboard.cpp  Mouse.cpp
Engine/Templates/2D/: main.cpp
Engine/Templates/2D/GameCode/: {{PROJECT_NAME}}.cpp
Engine/Types/: float01.cpp
Engine/include/Engine/: Event.hpp  ResourceManager.hpp  Settings.hpp
Engine/include/Engine/Data/: JSON.hpp  JsonParser.hpp
Engine/include/Engine/Input/: Gamepad.hpp  InputContexts.hpp  Keyboard.hpp  Mouse.hpp
Engine/include/Engine/Macros/: Assert.hpp  Profiling.hpp  Utils.hpp
Engine/include/Engine/Profiling/: Instrumentor.hpp  Timer.hpp
Engine/include/Engine/Reflection/: Concepts.hpp  Container.hpp  Deserializer.hpp  ICustomEditor.hpp  Load.hpp  Reflectable.hpp  ReflectionFactory.hpp  RenderInEditor.hpp  Save.hpp  Serializer.hpp
Engine/include/Engine/Rendering/: Color.gen.hpp  Color.hpp  Shader.hpp  ShaderPreProcessor.hpp  Texture.hpp
Engine/include/Engine/Types/: Ptr.hpp  float01.gen.hpp  float01.hpp
Engine/include/Engine2D/: Behaviour.gen.hpp  Behaviour.hpp  Component2D.gen.hpp  Component2D.hpp  Entity2D.gen.hpp  Entity2D.hpp  Game2D.hpp  Transform2D.gen.hpp  Transform2D.hpp
Engine/include/Engine2D/Animation/: Animation2D.gen.hpp  Animation2D.hpp  AnimationSystem.hpp  Animator2D.gen.hpp  Animator2D.hpp
Engine/include/Engine2D/ParticleSystem/: ParticleSystem2D.gen.hpp  ParticleSystem2D.hpp
Engine/include/Engine2D/Physics/: Collider2D.gen.hpp  Collider2D.hpp  CollisionGrid.hpp  CollisionManifold.hpp  Collisions.hpp  Physics2D.hpp  Rigidbody2D.gen.hpp  Rigidbody2D.hpp
Engine/include/Engine2D/Rendering/: Camera2D.gen.hpp  Camera2D.hpp  Renderable2D.gen.hpp  Renderable2D.hpp  Renderer2D.hpp  Sprite.hpp  SpriteRenderer.gen.hpp  SpriteRenderer.hpp
Engine/include/Engine2D/SceneManagement/: Scene.gen.hpp  Scene.hpp  SceneManager.hpp  SceneResources.gen.hpp  SceneResources.hpp
Engine/include/Engine2D/Types/: Vector2.hpp
Engine/include/Shaders/: sprite.glsl
Engine/src/Engine/: Log.cpp  ResourceManager.cpp  Settings.cpp
Engine/src/Engine/Data/: JSON.cpp  JsonParser.cpp
Engine/src/Engine/Input/: Gamepad.cpp  Keyboard.cpp  Mouse.cpp
Engine/src/Engine/Profiling/: Instrumentor.cpp  Timer.cpp
Engine/src/Engine/Reflection/: ICustomEditor.cpp  Reflectable.cpp
Engine/src/Engine/Rendering/: Color.cpp  Shader.cpp  ShaderPreProcessor.cpp  Texture.cpp
Engine/src/Engine/Types/: float01.cpp
Engine/src/Engine2D/: Component2D.cpp  Entity2D.cpp  Game2D.cpp  Transform2D.cpp
Engine/src/Engine2D/Animation/: Animation2D.cpp  AnimationSystem.cpp  Animator2D.cpp
Engine/src/Engine2D/ParticleSystem/: ParticleSystem2D.cpp  ParticleSystemRegistry2D.cpp
Engine/src/Engine2D/Physics/: Collider2D.cpp  CollisionGrid.cpp  CollisionManifold.cpp  Collisions.cpp  Physics2D.cpp  Rigidbody2D.cpp
Engine/src/Engine2D/Rendering/: Camera2D.cpp  Renderable2D.cpp  Renderer2D.cpp  SpriteRenderer.cpp
Engine/src/Engine2D/SceneManagement/: Scene.cpp  SceneManager.cpp  SceneResources.cpp
Templates/2D/: .gitignore  CMakeLists.txt  main.cpp  makefile
Templates/2D/Editor/: AllGenerated.hpp
Templates/2D/Engine/include/: Plugin.hpp
Templates/2D/Engine/src/: Plugin.cpp
Templates/2D/Game/include/: {{PROJECT_NAME}}.hpp
Templates/2D/Game/src/: {{PROJECT_NAME}}.cpp
Templates/2D/GameCode/: {{PROJECT_NAME}}.cpp  {{PROJECT_NAME}}.h
tools/CLI/: CMakeLists.txt  main.cpp
tools/CLI/include/: Command.hpp  OrderedMap.hpp  Utils.hpp
tools/CLI/include/Commands/: Build.hpp  BuildEditor.hpp  BuildEngine.hpp  BuildSdk.hpp  (+3 more)
tools/CLI/src/: Command.cpp  Utils.cpp
tools/HeaderForge/: CMakeLists.txt  main.cpp  makefile
tools/HeaderForge/include/: Concepts.hpp  Generator.hpp  Injector.hpp  Parser.hpp  Serializable.hpp  Serializer.hpp
tools/HeaderForge/src/: Generator.cpp  Injector.cpp  Parser.cpp
tools/HeaderForge/test/: TestSerialization.gen.hpp  TestSerialization.hpp
(+246 files in other folders)
